Started unifying message handling  Added design

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,3 +3,6 @@ MAINTAINERCLEANFILES	= Makefile.in
 SUBDIRS 		= source data doc
 EXTRA_DIST 		= asc.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO asc.lsm
 AUTOMAKE_OPTIONS 	= foreign
+
+htmldoc:
+	cd source ; make htmldoc
