--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -268,6 +268,9 @@
 				RelativePath="..\..\..\messages.cpp">
 			</File>
 			<File
+				RelativePath="..\..\..\messaginghub.cpp">
+			</File>
+			<File
 				RelativePath="..\..\..\misc.cpp">
 			</File>
 			<File
@@ -371,6 +374,9 @@
 			</File>
 			<File
 				RelativePath="..\..\..\unitctrl.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\unitinfodialog.cpp">
 			</File>
 			<File
 				RelativePath="..\..\..\vehicle.cpp">
