Fixes to unitinfo and mapeditor placement

--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -190,6 +190,9 @@
 				RelativePath="..\..\..\dlg_box.cpp">
 			</File>
 			<File
+				RelativePath="..\..\..\explosivemines.cpp">
+			</File>
+			<File
 				RelativePath="..\..\..\gamedialog.cpp">
 			</File>
 			<File
